--- a/model_training_validation.ipynb
+++ b/model_training_validation.ipynb
@@ -9,8 +9,8 @@
       "source": [
         "# Some References for Inspiration\n",
         "\n",
-        "* [Real/Fake Job Posting Prediction](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)\n",
-        "* [Fine-tuing BERT model for text classification](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)"
+        "* [kaggle: Real/Fake Job Posting Prediction](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)\n",
+        "* [進擊的 BERT：NLP 界的巨人之力與遷移學習](https://leemeng.tw/attack_on_bert_transfer_learning_in_nlp.html)"
       ]
     },
     {
