使用 Colaboratory 建立

--- a/data_observation_splitting.ipynb
+++ b/data_observation_splitting.ipynb
@@ -7,7 +7,10 @@
         "id": "37960d2c-6b41-45f5-a84e-5e11cd21fb25"
       },
       "source": [
-        "# Data Observation and Segmentation"
+        "# Data Observation and Data splitting\n",
+        "This notebook includes two parts\n",
+        "* Data observation\n",
+        "* Data splitting"
       ]
     },
     {
@@ -42,33 +45,18 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "### Function for summary data"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OUL-eYBZpKyM",
-        "outputId": "818a81ef-fd79-4e59-bd07-4775efdadb0f"
+        "id": "x9mGZvdCwTVI"
       },
-      "id": "OUL-eYBZpKyM",
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "id": "x9mGZvdCwTVI"
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "id": "244e545a-b84c-4463-8ba0-2d6691e33407",
       "metadata": {
         "id": "244e545a-b84c-4463-8ba0-2d6691e33407"
@@ -84,6 +72,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Setting variable"
+      ],
+      "metadata": {
+        "id": "O5EQ1rHfwmbJ"
+      },
+      "id": "O5EQ1rHfwmbJ"
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "id": "e8feb878-e052-4c3e-b31d-6e0df5fe85c3",
@@ -92,19 +90,57 @@
       },
       "outputs": [],
       "source": [
+        "DRIVE_MOUNT_PATH = \"/content/drive\"\n",
+        "PROJECT_PATH = \"MyDrive/Fake-JD-Detector\"\n",
         "TARGET_COLUMN = \"fraudulent\""
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Execut this cell to mount your google drive"
+      ],
+      "metadata": {
+        "id": "H0B7oIRyvEke"
+      },
+      "id": "H0B7oIRyvEke"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 9,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(DRIVE_MOUNT_PATH)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OUL-eYBZpKyM",
+        "outputId": "93e51226-d368-41b9-95d4-79275a8a2ae1"
+      },
+      "id": "OUL-eYBZpKyM",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "id": "fda09f56-f791-4802-af4b-678f48e1c63b",
       "metadata": {
         "id": "fda09f56-f791-4802-af4b-678f48e1c63b"
       },
       "outputs": [],
       "source": [
-        "job_postings_df = pd.read_csv(\"/content/drive/MyDrive/Fake-JD-Detector/job_postings_training_set.csv\")"
+        "job_postings_file = \"job_postings_training_set.csv\"\n",
+        "job_postings_df = pd.read_csv(os.path.join(DRIVE_MOUNT_PATH, PROJECT_PATH, job_postings_file))"
       ]
     },
     {
@@ -114,12 +150,12 @@
         "id": "6edec8fe-1e6e-4d08-be85-7f53641c20b3"
       },
       "source": [
-        "## Source Data"
+        "### Show data top 5 rows"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "ae65d11d-5666-4e62-a3ae-72dc2e468239",
       "metadata": {
         "colab": {
@@ -127,7 +163,7 @@
           "height": 600
         },
         "id": "ae65d11d-5666-4e62-a3ae-72dc2e468239",
-        "outputId": "5a42d27a-df32-4f0e-8d1e-cf3a505aae98"
+        "outputId": "d1ec92d6-45fd-4b0c-c401-cc98bddcff40"
       },
       "outputs": [
         {
@@ -192,7 +228,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f69fac13-d0e5-4892-b9dd-cab42da23008\">\n",
+              "  <div id=\"df-bc6d342d-e28d-492c-b784-e52b0b60802b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -341,7 +377,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f69fac13-d0e5-4892-b9dd-cab42da23008')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bc6d342d-e28d-492c-b784-e52b0b60802b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -392,12 +428,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f69fac13-d0e5-4892-b9dd-cab42da23008 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bc6d342d-e28d-492c-b784-e52b0b60802b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f69fac13-d0e5-4892-b9dd-cab42da23008');\n",
+              "          const element = document.querySelector('#df-bc6d342d-e28d-492c-b784-e52b0b60802b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -420,12 +456,22 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ],
       "source": [
         "job_postings_df.head()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary about null value and distinct elements"
+      ],
+      "metadata": {
+        "id": "sg3B2tupyoDw"
+      },
+      "id": "sg3B2tupyoDw"
     },
     {
       "cell_type": "code",
@@ -437,7 +483,7 @@
           "height": 614
         },
         "id": "18790cb1-2c62-4cd0-8415-ac1bf353d578",
-        "outputId": "a1a18cbc-5c8e-4c46-f550-91011b16c6f3"
+        "outputId": "f2c1a0c6-eb0b-49d2-be73-4c22441ba3c1"
       },
       "outputs": [
         {
@@ -466,7 +512,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-728457f1-e140-401d-9933-090cbfc32476\">\n",
+              "  <div id=\"df-ee1e6026-eedd-44c7-bdde-ebbbceadbf10\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -622,7 +668,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-728457f1-e140-401d-9933-090cbfc32476')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ee1e6026-eedd-44c7-bdde-ebbbceadbf10')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -673,12 +719,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-728457f1-e140-401d-9933-090cbfc32476 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ee1e6026-eedd-44c7-bdde-ebbbceadbf10 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-728457f1-e140-401d-9933-090cbfc32476');\n",
+              "          const element = document.querySelector('#df-ee1e6026-eedd-44c7-bdde-ebbbceadbf10');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -709,6 +755,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Show statistic of numerical data"
+      ],
+      "metadata": {
+        "id": "9Ed7eEyvy7l4"
+      },
+      "id": "9Ed7eEyvy7l4"
+    },
+    {
       "cell_type": "code",
       "execution_count": 12,
       "id": "539eef1e-5e51-4cef-9711-0a6e996421f4",
@@ -718,7 +774,7 @@
           "height": 300
         },
         "id": "539eef1e-5e51-4cef-9711-0a6e996421f4",
-        "outputId": "45f4359f-80e6-4942-843a-3d324267fec1"
+        "outputId": "f0b9f634-3aff-459b-87c6-54676d05d629"
       },
       "outputs": [
         {
@@ -747,7 +803,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3588b53e-abee-4581-a92e-d76452c9be28\">\n",
+              "  <div id=\"df-194da71d-adc0-4032-a15a-6eee9e4dd7df\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -842,7 +898,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3588b53e-abee-4581-a92e-d76452c9be28')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-194da71d-adc0-4032-a15a-6eee9e4dd7df')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -893,12 +949,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3588b53e-abee-4581-a92e-d76452c9be28 button.colab-df-convert');\n",
+              "          document.querySelector('#df-194da71d-adc0-4032-a15a-6eee9e4dd7df button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3588b53e-abee-4581-a92e-d76452c9be28');\n",
+              "          const element = document.querySelector('#df-194da71d-adc0-4032-a15a-6eee9e4dd7df');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -929,6 +985,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Distribution of target column"
+      ],
+      "metadata": {
+        "id": "XPnBWAt5zQTB"
+      },
+      "id": "XPnBWAt5zQTB"
+    },
+    {
       "cell_type": "code",
       "execution_count": 13,
       "id": "072359b9-546f-4696-ae70-bdec24219cea",
@@ -938,7 +1004,7 @@
           "height": 112
         },
         "id": "072359b9-546f-4696-ae70-bdec24219cea",
-        "outputId": "8bf3e01f-4bd4-430c-f25d-2839180585f8"
+        "outputId": "4a35903b-3f56-4a06-db90-bde4cf7c4115"
       },
       "outputs": [
         {
@@ -951,7 +1017,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a345d9ec-d560-4ad9-bccb-e2e4a8ee30b3\">\n",
+              "  <div id=\"df-35bd3bf6-d182-4f35-9d92-8e11373b2577\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -986,7 +1052,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a345d9ec-d560-4ad9-bccb-e2e4a8ee30b3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35bd3bf6-d182-4f35-9d92-8e11373b2577')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1037,12 +1103,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a345d9ec-d560-4ad9-bccb-e2e4a8ee30b3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-35bd3bf6-d182-4f35-9d92-8e11373b2577 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a345d9ec-d560-4ad9-bccb-e2e4a8ee30b3');\n",
+              "          const element = document.querySelector('#df-35bd3bf6-d182-4f35-9d92-8e11373b2577');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1081,12 +1147,12 @@
       "source": [
         "## Some References Inspire Me\n",
         "\n",
-        "* [Real/Fake Job Posting Prediction](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)"
+        "* [Kaggle: Real/Fake Job Posting Prediction](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "6a491336-0dbd-4311-b90b-a0f20590bda1",
       "metadata": {
         "id": "6a491336-0dbd-4311-b90b-a0f20590bda1"
@@ -1099,7 +1165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "bcc47c0d-9d09-4128-8e9f-f51e59e80c40",
       "metadata": {
         "colab": {
@@ -1409,7 +1475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "569441c0-d323-44ed-8272-43c151c933d5",
       "metadata": {
         "colab": {
@@ -1484,7 +1550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "70742e10-f650-4fd0-9104-f68dd112befc",
       "metadata": {
         "colab": {
@@ -1973,7 +2039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "437114e9-b456-4f94-bc3a-3330c91a2308",
       "metadata": {
         "colab": {
@@ -2410,7 +2476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "c024a833-3f65-4556-9878-db40106cbc81",
       "metadata": {
         "id": "c024a833-3f65-4556-9878-db40106cbc81"
