使用 Colaboratory 建立

--- a/data_observation_splitting.ipynb
+++ b/data_observation_splitting.ipynb
@@ -1152,20 +1152,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "6a491336-0dbd-4311-b90b-a0f20590bda1",
       "metadata": {
         "id": "6a491336-0dbd-4311-b90b-a0f20590bda1"
       },
       "outputs": [],
       "source": [
-        "# \n",
+        "# Because of following steps will extend some columns, so copy to new dataframe\n",
         "job_postings_extend_df = copy.deepcopy(job_postings_df)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "bcc47c0d-9d09-4128-8e9f-f51e59e80c40",
       "metadata": {
         "colab": {
@@ -1173,7 +1173,7 @@
           "height": 600
         },
         "id": "bcc47c0d-9d09-4128-8e9f-f51e59e80c40",
-        "outputId": "3bc319ee-7594-4133-c22b-f62b341b4113"
+        "outputId": "a11b5bcc-b472-4842-fb31-aa99f34ecca4"
       },
       "outputs": [
         {
@@ -1238,7 +1238,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-959d3303-df7d-4279-9f1c-3cdece1e6f2d\">\n",
+              "  <div id=\"df-b3f88b74-8c8f-4d0d-880c-6227959c8daa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1387,7 +1387,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-959d3303-df7d-4279-9f1c-3cdece1e6f2d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3f88b74-8c8f-4d0d-880c-6227959c8daa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1438,12 +1438,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-959d3303-df7d-4279-9f1c-3cdece1e6f2d button.colab-df-convert');\n",
+              "          document.querySelector('#df-b3f88b74-8c8f-4d0d-880c-6227959c8daa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-959d3303-df7d-4279-9f1c-3cdece1e6f2d');\n",
+              "          const element = document.querySelector('#df-b3f88b74-8c8f-4d0d-880c-6227959c8daa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1474,6 +1474,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Do some feature engineering"
+      ],
+      "metadata": {
+        "id": "5oaARmyb17Bl"
+      },
+      "id": "5oaARmyb17Bl"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "569441c0-d323-44ed-8272-43c151c933d5",
@@ -1495,21 +1505,22 @@
         }
       ],
       "source": [
-        "# Extend columns\n",
+        "# Extend some columns\n",
         "\n",
-        "# Using 0 length string replace Nan for more easy to detect\n",
+        "# Using 0 length string (\"\") replace Nan for more easy to detect\n",
         "job_postings_extend_df.fillna(\"\", inplace=True)\n",
         "\n",
-        "#\n",
+        "# Add is_null column for all value-loss columns\n",
+        "# If value is \"\", means loss, set value 1 otherwise 0\n",
         "null_counts = job_postings_df.isnull().sum()\n",
         "for column, null_count in null_counts.items():\n",
         "    if null_count > 0:\n",
         "        job_postings_extend_df[column+\"_is_null\"] = job_postings_extend_df[column].apply(lambda x: 0 if len(x) > 0 else 1)\n",
         "\n",
-        "#\n",
+        "# Spilt location to country, state, city\n",
         "job_postings_extend_df[[\"location_country\", \"location_state\", \"location_city\"]] = job_postings_extend_df[\"location\"].str.split(\", \",  2, expand=True)\n",
         "\n",
-        "#\n",
+        "# Processing salary range to numerical\n",
         "salary_range_lows, salary_range_ups, salary_range_diff = [], [], []\n",
         "for salary_range in job_postings_extend_df[\"salary_range\"].tolist():\n",
         "    \n",
@@ -1529,7 +1540,7 @@
         "job_postings_extend_df[\"salary_range_up\"] = salary_range_ups\n",
         "job_postings_extend_df[\"salary_range_diff\"] = salary_range_diff\n",
         "\n",
-        "#\n",
+        "# Combine string type data to text\n",
         "job_postings_extend_df[\"posting_text\"] = (\n",
         "    job_postings_extend_df[\"title\"]+\" \"+\n",
         "    job_postings_extend_df[\"location\"]+\" \"+\n",
@@ -1539,7 +1550,8 @@
         "    job_postings_extend_df[\"benefits\"]\n",
         ")\n",
         "\n",
-        "#\n",
+        "# Clean text, only keep a-z, A-Z, 0-9 characters\n",
+        "# \n",
         "job_postings_extend_df[\"posting_text_cleaned\"] = job_postings_extend_df[\"posting_text\"].apply(lambda x: re.sub(r\"[\\s]+\", \" \", re.sub(r\"[^a-zA-Z0-9]+\",\" \", x)).strip())\n",
         "\n",
         "#\n",
@@ -2453,16 +2465,6 @@
       "source": [
         "job_postings_extend_df.describe()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3a21756f-390f-4ec6-97bc-542d0d3716f1",
-      "metadata": {
-        "id": "3a21756f-390f-4ec6-97bc-542d0d3716f1"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
