使用 Colaboratory 建立

--- a/data_observation_splitting.ipynb
+++ b/data_observation_splitting.ipynb
@@ -19,10 +19,10 @@
       "id": "6eed1552-7b7e-4f76-b839-4545299e6602",
       "metadata": {
         "id": "6eed1552-7b7e-4f76-b839-4545299e6602",
-        "outputId": "b9c08dd3-2bdb-42db-a38f-92a914582c92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b9c08dd3-2bdb-42db-a38f-92a914582c92"
       },
       "outputs": [
         {
@@ -1186,22 +1186,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 24,
       "id": "569441c0-d323-44ed-8272-43c151c933d5",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "569441c0-d323-44ed-8272-43c151c933d5",
-        "outputId": "9e18c736-1687-4a8d-d647-99e4e78b8ece"
+        "outputId": "3b48e5be-05c6-4b90-aa75-7065513c3cac"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-19-7c67139ae57b>:12: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
-            "  job_postings_extend_df[[\"location_country\", \"location_state\", \"location_city\"]] = job_postings_extend_df[\"location\"].str.split(\", \",  2, expand=True)\n"
+            "<ipython-input-24-497b6cf56522>:13: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
+            "  job_postings_extend_df[split_column_names] = job_postings_extend_df[\"location\"].str.split(\", \",  2, expand=True)\n"
           ]
         }
       ],
@@ -1217,7 +1217,8 @@
         "        job_postings_extend_df[column+\"_is_null\"] = job_postings_extend_df[column].apply(lambda x: 0 if len(x) > 0 else 1)\n",
         "\n",
         "# Spilt location to country, state, city\n",
-        "job_postings_extend_df[[\"location_country\", \"location_state\", \"location_city\"]] = job_postings_extend_df[\"location\"].str.split(\", \",  2, expand=True)\n",
+        "split_column_names = [\"location_country\", \"location_state\", \"location_city\"]\n",
+        "job_postings_extend_df[split_column_names] = job_postings_extend_df[\"location\"].str.split(\", \",  2, expand=True)\n",
         "\n",
         "# Processing salary range to numerical\n",
         "salary_range_lows, salary_range_ups, salary_range_diff = [], [], []\n",
