使用 Colaboratory 建立

--- a/data_observation_splitting.ipynb
+++ b/data_observation_splitting.ipynb
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OUL-eYBZpKyM",
-        "outputId": "9a1b4571-790b-4bfd-b2aa-f1c29493932c"
+        "outputId": "599b09b2-0d88-476a-9983-3125a1874649"
       },
       "id": "OUL-eYBZpKyM",
       "execution_count": 5,
@@ -138,7 +138,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -187,7 +187,7 @@
           "height": 600
         },
         "id": "ae65d11d-5666-4e62-a3ae-72dc2e468239",
-        "outputId": "348b0c90-49cf-4b85-9ac8-02671dbfc6f8"
+        "outputId": "f6e122e4-fa06-4f0b-9f43-f8844901325c"
       },
       "outputs": [
         {
@@ -252,7 +252,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-73fb4909-d178-4835-bd90-e8a3ca17ceb7\">\n",
+              "  <div id=\"df-de2bf463-3913-42bd-8dff-275525ad44bc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -401,7 +401,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73fb4909-d178-4835-bd90-e8a3ca17ceb7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de2bf463-3913-42bd-8dff-275525ad44bc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -452,12 +452,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-73fb4909-d178-4835-bd90-e8a3ca17ceb7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-de2bf463-3913-42bd-8dff-275525ad44bc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-73fb4909-d178-4835-bd90-e8a3ca17ceb7');\n",
+              "          const element = document.querySelector('#df-de2bf463-3913-42bd-8dff-275525ad44bc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -507,7 +507,7 @@
           "height": 614
         },
         "id": "18790cb1-2c62-4cd0-8415-ac1bf353d578",
-        "outputId": "985b04b7-7a46-42aa-f16c-0f0000daad6a"
+        "outputId": "32deaba2-fa18-4c12-f5ae-7672e0f52a85"
       },
       "outputs": [
         {
@@ -536,7 +536,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c8edc08f-62fe-423b-8528-290b61999e27\">\n",
+              "  <div id=\"df-2381c9d3-42e5-42b7-97b3-e6f1756d2b85\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -692,7 +692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c8edc08f-62fe-423b-8528-290b61999e27')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2381c9d3-42e5-42b7-97b3-e6f1756d2b85')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -743,12 +743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c8edc08f-62fe-423b-8528-290b61999e27 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2381c9d3-42e5-42b7-97b3-e6f1756d2b85 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c8edc08f-62fe-423b-8528-290b61999e27');\n",
+              "          const element = document.querySelector('#df-2381c9d3-42e5-42b7-97b3-e6f1756d2b85');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -798,7 +798,7 @@
           "height": 300
         },
         "id": "539eef1e-5e51-4cef-9711-0a6e996421f4",
-        "outputId": "ae5ada62-4d31-4d58-96b3-3301ac238e4f"
+        "outputId": "d2c25278-9ad7-4dbb-ec72-4d4deac0e1c7"
       },
       "outputs": [
         {
@@ -827,7 +827,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-81bfd5cc-f21b-42a3-b553-0c3c0f75c11f\">\n",
+              "  <div id=\"df-565595ad-1bdd-4ace-8c56-2e557fd9e753\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -922,7 +922,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-81bfd5cc-f21b-42a3-b553-0c3c0f75c11f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-565595ad-1bdd-4ace-8c56-2e557fd9e753')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -973,12 +973,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-81bfd5cc-f21b-42a3-b553-0c3c0f75c11f button.colab-df-convert');\n",
+              "          document.querySelector('#df-565595ad-1bdd-4ace-8c56-2e557fd9e753 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-81bfd5cc-f21b-42a3-b553-0c3c0f75c11f');\n",
+              "          const element = document.querySelector('#df-565595ad-1bdd-4ace-8c56-2e557fd9e753');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1028,7 +1028,7 @@
           "height": 112
         },
         "id": "072359b9-546f-4696-ae70-bdec24219cea",
-        "outputId": "63c19d62-0de8-4a09-ab33-02c365dab830"
+        "outputId": "4904ac2d-9883-468c-fe81-d8e7b2e5a41a"
       },
       "outputs": [
         {
@@ -1041,7 +1041,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-778404fa-bed9-4d5b-acbd-6e3f8520564c\">\n",
+              "  <div id=\"df-ce0d281a-7509-4be6-8038-f06ac2e35ac4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1076,7 +1076,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-778404fa-bed9-4d5b-acbd-6e3f8520564c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce0d281a-7509-4be6-8038-f06ac2e35ac4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1127,12 +1127,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-778404fa-bed9-4d5b-acbd-6e3f8520564c button.colab-df-convert');\n",
+              "          document.querySelector('#df-ce0d281a-7509-4be6-8038-f06ac2e35ac4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-778404fa-bed9-4d5b-acbd-6e3f8520564c');\n",
+              "          const element = document.querySelector('#df-ce0d281a-7509-4be6-8038-f06ac2e35ac4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1244,7 +1244,7 @@
           "height": 175
         },
         "id": "WCvmIak1sN5s",
-        "outputId": "9b40a8ce-6b21-456e-a6cd-23a69b4fa104"
+        "outputId": "32547500-0310-48bf-d0ba-e7b26f9277c2"
       },
       "id": "WCvmIak1sN5s",
       "execution_count": 14,
@@ -1261,7 +1261,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d7e35d88-5143-48d6-abf2-bfeac00e3492\">\n",
+              "  <div id=\"df-cf7d1585-fe32-4d64-ab08-23a73ca82a8b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1314,7 +1314,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d7e35d88-5143-48d6-abf2-bfeac00e3492')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cf7d1585-fe32-4d64-ab08-23a73ca82a8b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1365,12 +1365,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d7e35d88-5143-48d6-abf2-bfeac00e3492 button.colab-df-convert');\n",
+              "          document.querySelector('#df-cf7d1585-fe32-4d64-ab08-23a73ca82a8b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d7e35d88-5143-48d6-abf2-bfeac00e3492');\n",
+              "          const element = document.querySelector('#df-cf7d1585-fe32-4d64-ab08-23a73ca82a8b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1443,7 +1443,7 @@
           "height": 476
         },
         "id": "lw8xKt-d0dgW",
-        "outputId": "df6bde2e-914f-4499-c2fc-faffa938014f"
+        "outputId": "e7863f3a-7bc2-43db-95eb-0074c6a3dfe2"
       },
       "id": "lw8xKt-d0dgW",
       "execution_count": 16,
@@ -1528,7 +1528,7 @@
           "height": 499
         },
         "id": "8g6abQ4e4BaK",
-        "outputId": "e9a4f2e3-ef98-4ec1-85d5-7736647e638a"
+        "outputId": "55d50f76-6ea7-46b1-d52f-4897dab797f2"
       },
       "id": "8g6abQ4e4BaK",
       "execution_count": 18,
@@ -1624,7 +1624,7 @@
           "height": 430
         },
         "id": "437114e9-b456-4f94-bc3a-3330c91a2308",
-        "outputId": "c134b622-334c-4103-8ded-0d16dbdf0cdc"
+        "outputId": "f72f2537-8e04-4fa7-97f6-28ebebf1ce30"
       },
       "outputs": [
         {
@@ -1669,12 +1669,13 @@
         "id": "81e3b6bb-441e-452b-8f43-d962783fffbb"
       },
       "source": [
-        "## Split Data to Train and Test"
+        "## Split Data to Train and Validation\n",
+        "Split 80% to training and 20% to validation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 24,
       "id": "c024a833-3f65-4556-9878-db40106cbc81",
       "metadata": {
         "id": "c024a833-3f65-4556-9878-db40106cbc81"
@@ -1684,18 +1685,20 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    job_postings_extend_df.posting_text_cleaned, \n",
-        "    job_postings_extend_df.fraudulent, \n",
+        "    job_postings_extend_df[\"posting_text_cleaned\"], \n",
+        "    job_postings_extend_df[TARGET_COLUMN], \n",
         "    test_size = 0.20, \n",
-        "    stratify=job_postings_extend_df.fraudulent, \n",
+        "    stratify=job_postings_extend_df[TARGET_COLUMN], \n",
         "    random_state = 777\n",
         ")\n",
         "\n",
         "train_df = pd.DataFrame({\"text\": X_train, \"fraudulent\": y_train})\n",
         "test_df = pd.DataFrame({\"text\": X_test, \"fraudulent\": y_test})\n",
         "\n",
-        "train_df.to_csv(\"/content/drive/MyDrive/Fake-JD-Detector/splitted_text_data/train.csv\", index=False)\n",
-        "test_df.to_csv(\"/content/drive/MyDrive/Fake-JD-Detector/splitted_text_data/verify.csv\", index=False)"
+        "output_destination = os.path.join(DRIVE_MOUNT_PATH, PROJECT_PATH, \"splitted_text_data\")\n",
+        "\n",
+        "train_df.to_csv(output_destination+\"/train.csv\", index=False)\n",
+        "test_df.to_csv(output_destination+\"/validation.csv\", index=False)"
       ]
     }
   ],
