--- a/model_training_validation.ipynb
+++ b/model_training_validation.ipynb
@@ -9,6 +9,10 @@
       "source": [
         "# Train model and validation\n",
         "Here, I use BERT as base-model, and fine-tune it\n",
+        "This notebook includes three parts\n",
+        "* Model fine-tune\n",
+        "* Model Validation\n",
+        "* Model testing"
         "\n",
         "### References\n",
         "  * [kaggle: Real/Fake Job Posting Prediction](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)\n",
